# snakemake

./: hatch_build.py  pyproject.toml  test-environment.yml
.github/workflows/: main.yml
src/snakemake/assets/: __init__.py
src/snakemake/report/html_reporter/data/: packages.py
tests/test_prebuilt_conda_script/dummy_package/: pyproject.toml
