[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dummy"
dynamic = ["version"]
license = ""
authors = [
    { name = "Egor Kosaretskiy" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.hatch.version]
path = "dummy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    " src/dummy",
]

[tool.hatch.build.targets.sdist]
include = [
    "/ src",
]
